Use jackson over gson (#2294)